--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head><base href="/">
+  <head><base href="https://matanwerbner.github.io/FlowState/">
     <meta charset="utf-8" />
     <title>FlowJsExample</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -19,5 +19,5 @@
   </head>
   <body>
     <div id="root"></div>
-  <script src="runtime.076d4cffbee422c6.js" type="module"></script><script src="main.695cf8375ec33d46.js" type="module"></script></body>
+  <script src="runtime.076d4cffbee422c6.js" type="module"></script><script src="main.824674f3b3d755ca.js" type="module"></script></body>
 </html>
